<resources>
    <string name="app_name">ForMenShop</string>

    <string name="shop_name">4 MEN</string>
    <string name="best_seller">Best Seller</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="product">Product</string>
    <string name="category">Category</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="products">Products</string>
    <string name="trending_products">Trending Products in VietNam</string>
    <string name="sign_in_to_know">Sign in to know trending products near you</string>
    <string name="sign_in">Sign in</string>
    <string name="categories_may_like">Categories you may like</string>
    <string name="products_across">Products across VietNam</string>
    <string name="deals_of_day">Deals of the day</string>
    <string name="view_all">View all</string>
    <string name="support_locals">Support the locals</string>
    <string name="make_in_vietnam">Make in VietNam</string>
    <string name="recently_viewed_products">Recently Viewed Products</string>
    <string name="clear">Clear</string>
    <string name="no_recent_product_viewed">No Recent Product Viewed</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="welcome_back">Welcome back</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="register_now">REGISTER NOW</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="login_now">LOGIN NOW</string>
    <string name="full_name">Full Name</string>
    <string name="register">Register</string>
    <string name="product_name">Product Name</string>
    <string name="product_description">Product Description</string>
    <string name="product_title">Product title</string>
    <string name="pPrice">200.000 đ</string>
    <string name="buy_now">Buy Now</string>
    <string name="description">Description</string>
    <string name="more_info">More information about this product</string>
    <string name="about_this_product">More descriptions about this product,....</string>
    <string name="my_profile">My Profile</string>
    <string name="search_product">Search a product</string>
    <string name="logout">Logout</string>
    <string name="app_settings">App Settings</string>
    <string name="my_campaigns">My Campaigns</string>
    <string name="account_settings">Account Settings</string>
    <string name="title_header">Product with ❤</string>
    <string name="category_name">Category name</string>
    <string name="search">Search</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="best_sellers">Best Sellers</string>
    <string name="my_cart">My Cart</string>

    <string name="success_icon">Success Icon</string>
    <string name="payment_successful">Payment Successful</string>
    <string name="payment_failed">Payment Failed</string>
    <string name="thank_you_for_your_purchase">Thank you for your purchase.</string>
    <string name="back_to_home">Back to Home</string>
    <string name="products_purchased">Products Purchased:</string>

</resources>