<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@id/main"
    android:background="#F4F4F4">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/logotrans" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/welcome_back"
        android:textColor="@color/blue_700"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/loginEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edittext_bg"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="18dp"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/loginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edittext_bg"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="18dp"
            android:textSize="15sp" />

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/button_bg"
            android:text="@string/log_in"
            android:textColor="@color/white" />

        <androidx.cardview.widget.CardView
            android:id="@+id/googleSignInBtn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="-10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="60dp"
            android:textColor="@color/white"
            app:cardCornerRadius="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="20dp"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@+id/gSignin"
                    android:src="@drawable/gsignin" />

                <TextView
                    android:id="@+id/gSignin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:text="@string/sign_in"
                    android:textAllCaps="true"
                    android:textColor="@color/blue_500"
                    android:visibility="visible" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-150dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:src="@drawable/bottom_design" />

        <RelativeLayout
            android:id="@+id/registerBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp">

            <TextView
                android:id="@+id/txt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/dont_have_account"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/century_bold"
                android:text="@string/register_now"
                android:textColor="@color/white" />
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>