<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Activities.SuccessActivity">

    <!-- Success Icon -->
    <ImageView
        android:id="@+id/success_icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/check_mark"
        android:contentDescription="@string/success_icon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintWidth_percent="0.2" />

    <!-- Success Message -->
    <TextView
        android:id="@+id/success_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/payment_successful"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/success_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintWidth_percent="0.8" />

    <!-- Sub Message -->
    <TextView
        android:id="@+id/sub_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/thank_you_for_your_purchase"
        android:textSize="16sp"
        android:textAlignment="center"
        android:textColor="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/success_message"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintWidth_percent="0.8" />

    <!-- Products List Title -->
    <TextView
        android:id="@+id/products_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/products_purchased"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/sub_message"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        app:layout_constraintWidth_percent="0.8" />

    <!-- Products List -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/products_list"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/products_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:padding="16dp"
        app:layout_constraintWidth_percent="0.8"/>

    <!-- Total Amount -->
    <TextView
        android:id="@+id/total_amount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Total: $50.00"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/products_list"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintWidth_percent="0.8"/>
    <Button
    android:id="@+id/home_button"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="36dp"
    android:backgroundTint="@color/primary"
    android:text="@string/back_to_home"
    android:textColor="@color/white"
    app:cornerRadius="50dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.497"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/total_amount"
    app:layout_constraintWidth_percent="0.8" />

</androidx.constraintlayout.widget.ConstraintLayout>



