<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E5E5E5"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="250dp">

                <ImageView
                    android:id="@+id/mainImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img2a" />
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/description_bg"
                android:orientation="vertical"
                android:padding="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/pName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="8"
                        android:fontFamily="@font/nunito_bold"
                        android:maxLines="1"
                        android:text="@string/product_title"
                        android:textColor="@color/blue_700"
                        android:textSize="18sp" />

                    <ImageView
                        android:id="@+id/like"
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:layout_weight="0.8"
                        android:backgroundTint="@color/organe"
                        android:src="@drawable/heart2" />
                </LinearLayout>

                <TextView
                    android:id="@+id/pPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/nunito_bold"
                    android:text="@string/pPrice"
                    android:textColor="@color/organe"
                    android:textSize="16sp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp">

                    <Button
                        android:id="@+id/btnAddToCart"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button_bg"
    android:backgroundTint="@color/blue_400"
                        android:text="Add to Cart"
                        android:layout_weight="1"
                        android:textColor="@color/black"
                        android:layout_marginRight="@dimen/activity_vertical_margin"/>

                    <Button
                        android:id="@+id/btnBuyNow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginLeft="@dimen/activity_vertical_margin"
                        android:layout_weight="1"
                        android:background="@drawable/button_bg"
                        android:text="@string/buy_now"
                        android:textColor="@color/black" />

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="89dp"
                    android:layout_height="69dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    app:cardCornerRadius="10dp">

                    <ImageView
                        android:id="@+id/img1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/img2" />
                </androidx.cardview.widget.CardView>

<!--                <androidx.cardview.widget.CardView-->
<!--                    android:id="@+id/amazonIcon"-->
<!--                    android:layout_width="89dp"-->
<!--                    android:layout_height="69dp"-->
<!--                    android:layout_centerHorizontal="true"-->
<!--                    android:layout_marginStart="10dp"-->
<!--                    android:layout_marginTop="5dp"-->
<!--                    android:layout_marginBottom="5dp"-->
<!--                    app:cardCornerRadius="10dp">-->

<!--                    <ImageView-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="match_parent"-->
<!--                        android:scaleType="centerCrop"-->
<!--                        android:src="@drawable/img2b" />-->
<!--                </androidx.cardview.widget.CardView>-->

                <androidx.cardview.widget.CardView
                    android:layout_width="89dp"
                    android:layout_height="69dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="5dp"
                    android:visibility="gone"
                    app:cardCornerRadius="10dp">

                    <ImageView
                        android:id="@+id/shopIcon"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="25dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/filpkart"
                        android:visibility="gone" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/description_bg"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textColor="@color/blue_700"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/pDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/product_description"
                    android:textColor="#797979" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/description_bg"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/more_info"
                    android:textColor="@color/blue_700" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_this_product"
                    android:textColor="#BFBFBF"
                    android:textSize="12sp" />
            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="5dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="35dp"
                    android:src="@drawable/logotrans" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/shop_name"
                    android:textColor="@color/blue_700"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>